refactor : Plan Module SOLID & Swagger
